@@ -10,8 +10,8 @@ Version 2.15
 * The following bugs are resolved with this release:
 
   9696, 11589, 12403, 12847, 12868, 12852, 12874, 12885, 12907, 12922,
-  12935, 13007, 13021, 13068, 13090, 13092, 13114, 13118, 13123, 13134,
-  13138, 13150
+  12935, 13007, 13021, 13067, 13068, 13090, 13092, 13114, 13118, 13123,
+  13134, 13138, 13150
 
 * New program pldd to list loaded object of a process
   Implemented by Ulrich Drepper.
