@@ -1,5 +1,8 @@
 2011-09-11  Ulrich Drepper  <drepper@gmail.com>
 
+	[BZ #13067]
+	* malloc/obstack.h [!GNUC] (obstack_free): Avoid cast to int.
+
 	[BZ #13090]
 	* configure.in: Fix use of AC_INIT.
 
